# synapsenet

./: LICENSE  README.md
SynapseNet/: .dockerignore  .gitignore  API_EXAMPLES.md  BUILD_INSTALLERS.md  BUILD_PQC.md  CHANGELOG.md  COMPLETE_SYSTEM_VERIFICATION.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FINAL_STATUS.md  FINAL_VERIFICATION_COMPLETE.md  GENESIS_v1.0.txt  HACKERNEWS_POST.md  INSTALL.md  INSTALLATION_GUIDE.md  LAUNCH_CHECKLIST.md  MULTI_MODEL_COMPLETE.md  Makefile  P2P_MESH_COMPLETE.md  PQC_DONE.md  PQC_IMPLEMENTATION_SUMMARY.md  PQC_QUICKSTART.md  PROJECT_OVERVIEW.md  README.md  RELEASE_ANNOUNCEMENT_v0.4.md  RELEASE_CHECKLIST_v0.4.md  RELEASE_NOTES_v0.3.md  RELEASE_NOTES_v0.4.md  RELEASE_NOTES_v1.0.md  SECURITY.md  SETUP.md  START_HERE.md  TAURI_MVP_COMPLETE.md  V0.3_COMPLETE.md  V0.3_SUMMARY.md  V0.4_COMPLETE_SUMMARY.md  V0.4_FINAL_SUMMARY.md  V0.4_IMPLEMENTATION_COMPLETE.md  (+46 more)
SynapseNet/.cargo/: config.toml
SynapseNet/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.backup
SynapseNet/apps/desktop/src-tauri/src/: commands.rs  events.rs  main.rs  node.rs  state.rs
SynapseNet/apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
SynapseNet/apps/mobile/src-tauri/src/: accessibility.rs  commands.rs  main.rs  notifications.rs  poe.rs  state.rs
SynapseNet/benches/: performance_benchmarks.rs
SynapseNet/chain/poe_wasm/: Cargo.toml
SynapseNet/chain/poe_wasm/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
SynapseNet/crates/agent/: Cargo.toml
SynapseNet/crates/agent/src/: agent_core.rs  lib.rs  sandbox.rs  tool_api.rs  tool_registry.rs
SynapseNet/crates/ai/: Cargo.toml
SynapseNet/crates/ai/src/: action_selector.rs  batch.rs  consequence.rs  gpu_providers.rs  lib.rs  memory_chain.rs  multi_model.rs  onnx_embed.rs  planner.rs  reasoner.rs  reasoner_v2.rs  reflection.rs
SynapseNet/crates/ai/src/mobile/: coreml.rs  cpu.rs  manager.rs  mod.rs  nnapi.rs
SynapseNet/crates/ai/tests/: batch_tests.rs  multi_model_tests.rs
SynapseNet/crates/api/: Cargo.toml
SynapseNet/crates/api/src/: agent_api.rs  lib.rs  metrics.rs  reason_api.rs  rest.rs  rpc.rs  swarm_api.rs  v2.rs
SynapseNet/crates/core/: Cargo.toml
SynapseNet/crates/core/src/: config.rs  crypto.rs  episodes.rs  episodes_v2.rs  error.rs  goals.rs  grain.rs  graph.rs  lib.rs  logging.rs  metrics.rs  poe_hooks.rs  recovery.rs
SynapseNet/crates/core/src/mobile/: battery.rs  capabilities.rs  capsule.rs  encryption.rs  keystore.rs  mod.rs  recovery.rs  scheduler.rs
SynapseNet/crates/core/tests/: pqc_tests.rs
SynapseNet/crates/p2p/: Cargo.toml
SynapseNet/crates/p2p/src/: clustering.rs  dht.rs  lib.rs  nat.rs  pqc_transport.rs  reason_handlers.rs  reason_msgs.rs  swarm.rs  swarm_handlers.rs  swarm_msgs.rs
SynapseNet/crates/p2p/src/mobile/: manager.rs  mod.rs  network_state.rs  queue.rs  relay.rs  webrtc.rs
SynapseNet/crates/p2p/tests/: kyber_tests.rs
SynapseNet/crates/storage/: Cargo.toml
SynapseNet/crates/storage/src/: index_hnsw.rs  lib.rs  migrations.rs  parquet_io.rs  schema_v6.rs  store.rs  swarm_store.rs  v03_migration.rs
SynapseNet/crates/storage/src/migrations/: v6.sql
SynapseNet/crates/swarm/: Cargo.toml
SynapseNet/crates/swarm/src/: com.rs  lib.rs  loop_impl.rs  rov.rs  schema.rs
SynapseNet/crates/tauri-app/: .gitignore  Cargo.toml  README.md  index.html  package.json  tauri.conf.json  vite.config.ts  vitest.config.ts
SynapseNet/crates/tauri-app/src/: commands.rs  main.rs  state.rs
SynapseNet/crates/tauri-app/src-ui/: App.tsx  styles.css
SynapseNet/crates/tauri-app/src-ui/components/: AddGrainView.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  GraphView.tsx  MonitoringView.tsx  SearchView.tsx  SettingsView.tsx  StatsView.tsx  UpdateNotification.tsx
SynapseNet/crates/tauri-app/src-ui/hooks/: useErrorHandler.ts
SynapseNet/crates/tauri-app/src-ui/tests/: AddGrainView.test.tsx  SearchView.test.tsx  setup.ts
SynapseNet/crates/tauri-app/tests/: integration_tests.rs
SynapseNet/crates/tools_official/: Cargo.toml
SynapseNet/crates/tools_official/src/: code_exec.rs  file_ops.rs  lib.rs  math_eval.rs  web_fetch.rs
SynapseNet/docker/: compose.yaml
SynapseNet/docs/: API.md  API_MIGRATION_v1_to_v2.md  ARCHITECTURE.md  AUTO_UPDATE.md  BUILDING_INSTALLERS.md  FAQ.md  GPU.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_v0.4.md  POE_ONCHAIN.md  PQC.md  QUICKSTART.md  ROADMAP.md  SECURITY_AUDIT_v0.4.md  TESTNET.md  USER_GUIDE.md
SynapseNet/examples/: README.md  basic_usage.rs  gpu_demo.rs  p2p_broadcast.rs  p2p_with_storage.rs  poe_demo.rs  pqc_demo.rs
SynapseNet/node/poe_batch/: Cargo.toml
SynapseNet/node/poe_batch/src/: aggregate.rs  lib.rs  submit.rs
SynapseNet/scripts/: bench.sh  build-all-platforms.sh  build-desktop.ps1  build-desktop.sh  build-installers.sh  deploy-contracts.sh  deploy-website.sh  devnet.ps1  devnet.sh  init-testnet.sh  release-v1.0.sh
SynapseNet/tests/: integration_tests.rs
SynapswNet/: 00_README_FIRST.md  BUILD.md  Cargo.toml  FINAL_REPORT_v0.2.0.md  GENESIS.txt  LICENSE-MIT  NEXT_STEPS.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  README.ru.md  RELEASE_NOTES_v0.2.md  SECURITY.md  config.toml.example  docker-compose.yml
SynapswNet/.github/: pull_request_template.md
SynapswNet/.github/ISSUE_TEMPLATE/: bug_report.md
SynapswNet/.github/workflows/: ci.yml
SynapswNet/.kiro/specs/v0.2-onnx-p2p-parquet/: design.md
SynapswNet/crates/ai/src/: embed.rs  model_manager.rs  onnx_embed.rs
SynapswNet/crates/api/: Cargo.toml
SynapswNet/crates/api/src/: lib.rs  rest.rs
SynapswNet/crates/cli/: Cargo.toml
SynapswNet/crates/core/: Cargo.toml
SynapswNet/crates/core/src/: lib.rs  link.rs  poe.rs
SynapswNet/crates/economy/src/: lib.rs  reputation.rs
SynapswNet/crates/governance/: Cargo.toml
SynapswNet/crates/p2p/src/: lib.rs  topics.rs
SynapswNet/crates/storage/: Cargo.toml
SynapswNet/crates/storage/src/: lib.rs  store.rs
SynapswNet/docs/: DOCKER.md
SynapswNet/examples/: p2p_demo.rs  p2p_query.rs  policy_demo.rs
SynapswNet/tests/: e2e.rs
(+74 files in other folders)
