[package]
name = "synapsenet-ai"
version = "0.2.0"
edition = "2021"

[dependencies]
synapsenet-core = { path = "../core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
tokenizers = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
