[package]
name = "synapsenet-core"
version = "0.2.0"
edition = "2021"

[dependencies]
# Classical crypto
ed25519-dalek = { workspace = true, optional = true }
# Post-quantum crypto
pqcrypto-dilithium = { workspace = true, optional = true }
pqcrypto-kyber = { workspace = true, optional = true }
pqcrypto-traits = { workspace = true, optional = true }
# Common
blake3 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tokio = { workspace = true }

[features]
default = ["classical-crypto"]
classical-crypto = ["ed25519-dalek"]
pqc-dilithium = ["pqcrypto-dilithium", "pqcrypto-traits"]
pqc-kyber = ["pqcrypto-kyber", "pqcrypto-traits"]
pqc = ["pqc-dilithium", "pqc-kyber"]

[dev-dependencies]
rand = { workspace = true }
