[package]
name = "synapsenet-p2p"
version = "0.2.0"
edition = "2021"

[dependencies]
synapsenet-core = { path = "../core" }
libp2p = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
