[package]
name = "synapsenet-storage"
version = "0.2.0"
edition = "2021"

[dependencies]
synapsenet-core = { path = "../core" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hnsw_rs = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
rand = { workspace = true }
