[package]
name = "synapsenet-tauri"
version = "0.4.0"
edition = "2021"
authors = ["SynapseNet Contributors"]
license = "MIT OR Apache-2.0"
description = "SynapseNet Tauri Desktop Application"

[dependencies]
# Tauri
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = "0.4"
hex = "0.4"

# SynapseNet crates
synapsenet-core = { path = "../core", features = ["classical-crypto"] }
synapsenet-storage = { path = "../storage" }
synapsenet-ai = { path = "../ai" }
synapsenet-p2p = { path = "../p2p" }
synapsenet-economy = { path = "../economy" }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = []
