[package]
name = "synapsenet-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "syn"
path = "src/main.rs"

[dependencies]
synapsenet-core = { path = "../core" }
synapsenet-storage = { path = "../storage" }
synapsenet-ai = { path = "../ai" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
indicatif = "0.17"
