[package]
name = "synapsenet-core"
version = "0.2.0"
edition = "2021"

[dependencies]
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"

[dev-dependencies]
rand = { workspace = true }
