[package]
name = "synapsenet-desktop"
version = "1.0.0"
description = "SynapseNet Desktop - Decentralized Intelligence for Everyone"
authors = ["SynapseNet Contributors"]
license = "MIT"
repository = "https://github.com/synapsenet/synapsenet"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# SynapseNet core dependencies
synapsenet-core = { path = "../../../crates/core" }
synapsenet-p2p = { path = "../../../crates/p2p" }
synapsenet-storage = { path = "../../../crates/storage" }
synapsenet-swarm = { path = "../../../crates/swarm" }
synapsenet-ai = { path = "../../../crates/ai" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
